Posts service (#6)
* change secret

* fix diagram

* fix diagram

* posts mock service

* fixes

* proxy change

* almost done'

* go mod tidy

* add handlers

* task is done

* push
